[Fix][Lex] Scrollbar was visible in StockItems even though the entire space is not yet occupied

--- a/client/src/components/module/Stock/StockItems/StockItems.module.css
+++ b/client/src/components/module/Stock/StockItems/StockItems.module.css
@@ -9,3 +9,7 @@
   overflow-y: scroll;
   max-height: 75vh;
 }
+
+.list::-webkit-scrollbar-track {
+  background: transparent;
+}
